# fermentation-pi

./: .gitignore  Cargo.toml
fermentation-pi-client/src/: App.vue
fermentation-pi-client/src/router/: index.ts
fermentation-pi-client/src/views/: SensorView.vue  SettingsView.vue
server/fermentation-pi-client/: .gitignore  README.md  package-lock.json  package.json
server/fermentation-pi-client/src/assets/: main.css
server/fermentation-pi-client/src/components/: chartConfig.ts
server/fermentation-pi-client/src/views/: WebcamView.vue
server/src/: main.rs
server/src/route/: webcam.rs
server/src/service/: database.rs  sensor.rs  webcam.rs
src/: main.rs
src/basic_runners/: manage_climate.rs  sensor_logger.rs
src/route/: heartbeat.rs  index.rs  project.rs  sensor_value.rs  webcam.rs
src/service/: database.rs  gpio.rs  sensor.rs  webcam.rs
